Cambios en la DB
Modificaciones en Screen Home cambios en la sentencia create table
Modificaciones en Screen Maps se agrega la funcion getWeather para obtener la temperatura se modifica el INSERT para almacenar en la DB la variable current_temp y mostrar posteriormente en el listado de ciudades
Modificacion Screen Weather para actualizar temperatura en la DB
Modificacion Screen ViewAllCities para mostrar la temperatura actual en el listado de ciudades

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sundae_Weather_app",
-    "slug": "sundae_weather_app",
+    "name": "sundaeWeather",
+    "slug": "sundaeweather",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
